# pyautokit

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  PYPI_SETUP.md  QUICKSTART.md  README.md  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
examples/: README.md  analyze_logs.py  backup_project.py  monitor_egld.py  organize_downloads.py  playwright_automation.py  scrape_news.py  send_bulk_emails.py
pyautokit/: __init__.py  __main__.py  api_client.py  backup_manager.py  blockchain_monitor.py  config.py  data_processor.py  email_automation.py  file_organizer.py  github_utils.py  log_analyzer.py  logger.py  playwright_utils.py  security_utils.py  task_scheduler.py  utils.py  web_scraper.py
tests/: __init__.py  conftest.py  test_blockchain_monitor.py  test_file_organizer.py  test_github_utils.py  test_playwright_utils.py
