[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautokit"
version = "1.0.0"
authors = [
    {name = "George Pricop", email = "96602369+Gzeu@users.noreply.github.com"},
]
description = "Python Automation Toolkit - Complete CLI utilities for everyday tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
keywords = [
    "automation",
    "cli",
    "utilities",
    "file-organizer",
    "web-scraper",
    "email-automation",
    "backup",
    "security",
    "blockchain",
    "cryptocurrency",
    "data-processing",
    "productivity",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "schedule>=1.2.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
watch = [
    "watchdog>=3.0.0",
]
all = [
    "watchdog>=3.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/Gzeu/pyautokit"
"Bug Reports" = "https://github.com/Gzeu/pyautokit/issues"
"Source" = "https://github.com/Gzeu/pyautokit"
"Documentation" = "https://github.com/Gzeu/pyautokit#readme"

[project.scripts]
pyautokit = "pyautokit.__main__:main"
pyautokit-organize = "pyautokit.file_organizer:main"
pyautokit-scrape = "pyautokit.web_scraper:main"
pyautokit-email = "pyautokit.email_automation:main"
pyautokit-backup = "pyautokit.backup_manager:main"
pyautokit-logs = "pyautokit.log_analyzer:main"
pyautokit-data = "pyautokit.data_processor:main"
pyautokit-security = "pyautokit.security_utils:main"
pyautokit-crypto = "pyautokit.blockchain_monitor:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["pyautokit"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
